<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.umesh_yadav_25327.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.umesh_yadav_25327.ui.profile.ProfileFragment"
        android:label="@string/my_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.umesh_yadav_25327.ui.category.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_myorders"
        android:name="com.example.umesh_yadav_25327.ui.orders.MyOrdersFragment"
        android:label="@string/my_orders"
        tools:layout="@layout/fragment_my_orders" />
    <fragment
        android:id="@+id/nav_mycart"
        android:name="com.example.umesh_yadav_25327.ui.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.umesh_yadav_25327.ui.InfoFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_info" />
</navigation>